--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,9 @@
 .list {
     color: #fff;
 }
-
+.list:hover {
+    color: blue;
+}
 .burger-bar {
     display: none;
     font-size: 40px;
@@ -63,4 +65,45 @@
     margin-left: 10px;
     margin-right: 10px;
    
+}
+
+/* body */
+.section1 {
+    display: flex;
+    max-width: 1200;
+    width: 100%;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+.left-div { 
+    width: 460px;
+
+}
+.about2 {
+    color: blue;
+    font-style: bold;
+}
+.trust {
+    font-size: 60px;
+}
+.paragraph {
+    margin-top: 20px;
+}
+
+.readmore {
+    height: 50px;
+    width: 100px;   
+    background-color: blue;
+    color: #fff;
+    font-size: 20px;
+    align-items: center;
+    justify-content: center;   
+    margin-top: 20px;
+   
+}
+
+.right-div {
+   max-width: 536px;
+   width: 100%;
+  
 }
