--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,4 +38,12 @@
 
         }
 
-@media (max-width: )
+@media (max-width: 900px ) {
+        .section1 {
+            flex-direction: column;
+            align-items: center;
+        }
+        .right-div {
+            margin-top: 50px;
+        }
+}
