--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,39 +11,73 @@
         }
         .burger-bar {
         display: block;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: flex-end;
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
         color: #fff;
         font-size: 30px;
         margin-right: 50px;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         margin-top: 30px;
          }
         .nav-head {
            
-            justify-content: center;
+            -webkit-box-pack: center;
+           
+                -ms-flex-pack: center;
+           
+                    justify-content: center;
         }
         .nav-li2 {
-            justify-content: center;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
         }
         .nav {
-            justify-content: space-between;
+            -webkit-box-pack: justify;
+                -ms-flex-pack: justify;
+                    justify-content: space-between;
             
         }
         .hotel {
-            align-items: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
         }
-
-
 
         }
 
 @media (max-width: 900px ) {
         .section1 {
-            flex-direction: column;
-            align-items: center;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
         }
         .right-div {
             margin-top: 50px;
         }
+}
+
+@media (max-width: 1024px) {
+        .box {
+            width: 48%;
+            margin-top: 20px;
+        }
+        
+}
+
+@media (max-width: 750px) {
+        .box {
+            width: 60%;
+        }
+    
 }
