--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,12 @@
     background-image: url(../images/header-image.jpg);
     height: 300px;
     position: relative;
- 
-   
 }
 .nav {
     max-width: 1200;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .hotel {
@@ -19,8 +19,12 @@
     margin-left: 50px;
 }
 .nav-li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;  
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;  
     width: 100%;
     margin-left: 500px;
     margin-right: 100px; 
@@ -47,6 +51,8 @@
     ;
 }
 .nav-head {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     color: white;
     font-size: 50px;  
@@ -55,6 +61,8 @@
     color: #fff;
 }
 .nav-li2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: 20px;
 }
@@ -67,12 +75,15 @@
    
 }
 
-/* body */
+/* section1 */
 .section1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     max-width: 1200;
     width: 100%;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     margin-top: 100px;
 }
 .left-div { 
@@ -96,8 +107,15 @@
     background-color: blue;
     color: #fff;
     font-size: 20px;
-    align-items: center;
-    justify-content: center;   
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;   
     margin-top: 20px;
    
 }
@@ -106,4 +124,85 @@
    max-width: 536px;
    width: 100%;
   
+}
+/* section 2 */
+
+.background2 {
+    background-image: url(../images/section-image.jpg);
+    height: 500px;
+    position: relative;
+    background-size: cover;
+    background-repeat: repeat-y; 
+    margin-top: 40px;  
+}
+.about3 {
+    color: blue;
+    padding-top: 70px;
+    padding-left: 50px;
+}
+.text {
+    color: #fff;
+    font-size: 40px;
+    width: 350px;
+    padding-left: 50px;
+
+}
+.flex-wraper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin-top: 30px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+}
+
+.box {
+    width: 250px;
+    height: 250px;
+    background-color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+
+}
+
+.bluediv {
+    width: 60px;
+    height: 60px;
+    background-color: blue;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    
+}
+.building {
+    width: 40px;
+}
+.wifi {
+    padding-top: 20px;
+    font-size: 25px;
+    max-width: 150px;
+}
+
+.paragraph2 {
+    padding-top: 20px;
+    width: 200px;
+    color: gray;
 }
